<resources>
    <string name="app_name">NellionsCanvas</string>

    <!-- menu -->
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_media">Media</string>
    <string name="action_sync">Refresh</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="title_activity_category">categoryActivity</string>
    <string name="title_activity_item">ItemActivity</string>

    <!-- Strings -->
    <string name="main_logout">Logout</string>
    <string name="title_activity_view_summary">Summary</string>
    <string name="title_activity_new_room">New Room</string>
    <string name="title_activity_new_item">New Item</string>
    <string name="title_activity_media">Media</string>
    <string name="title_activity_photos_view">Photos</string>
    <string name="main_sync">Sync</string>
    <string name="title_activity_syncronize">Syncronize</string>
    <string name="action_new">New</string>
</resources>
