<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nellions.nellionscanvas.ItemActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="200"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_media"
        android:orderInCategory="100"
        android:title="@string/action_media"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_submmit"
        android:orderInCategory="50"
        android:title="View"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_total_volume"
        android:orderInCategory="100"
        android:title="(0.0)"
        app:showAsAction="ifRoom" />

</menu>