<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nellions.nellionscanvas.CategoryActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/stat_notify_sync"
        android:orderInCategory="60"
        android:title="@string/action_sync"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_submmit"
        android:orderInCategory="80"
        android:title="View"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_category"
        android:orderInCategory="100"
        android:title="@string/action_new"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_total_volume"
        android:orderInCategory="90"
        android:title="0.0"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>